<resources>
    <string name="app_name">mobiDine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chinese Dragon Cafe</string>
    <string name="nav_header_subtitle">Manage your Restaurant Food Items Here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add Item</string>
    <string name="menu_edit">Edit Item</string>
    <string name="menu_delete">Delete Item</string>
    <string name="menu_editrest">Restaurant Management</string>
    <string name="others">Others</string>

</resources>
