<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_item"
            android:icon="@drawable/ic_art_track_black_24dp"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_edit_item"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_edit" />
        <item
            android:id="@+id/nav_delete_item"
            android:icon="@drawable/ic_delete_sweep_black_24dp"
            android:title="@string/menu_delete" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_edit_rest"
                android:icon="@android:drawable/ic_menu_set_as"
                android:title="@string/menu_editrest" />
        </menu>
    </item>

</menu>
